docs(table): assorted additions

--- a/src/pages/guidelines/color/implementation.mdx
+++ b/src/pages/guidelines/color/implementation.mdx
@@ -495,7 +495,7 @@ color backgrounds with light color text.
 </Column>
 </Row>
 
-### When to use inline theming
+### When to use modes
 
 Adding the ability to change between a light or dark mode in your product is not
 required as an IBM product but is highly encouraged. Attention to detail,
@@ -518,7 +518,7 @@ dark mode is better for people with cataract and related disorders. Dark mode
 emits less light and can therefor reduces eyes strain and help prevent headaches
 and migraine.
 
-### How inline theming works
+### How modes works
 
 The themes use color tokens to interpret which values are needed for each theme.
 It is the color tokens that allows a UI to so easily switch from one mode to the
@@ -579,7 +579,7 @@ a mode control in IBM products may be offered in the future.
   where the user can save their theme preference (right).
 </Caption>
 
-#### Inline themes
+#### Inline themes with modes
 
 Mixing themes inline is still allowed with light or dark mode. Mixing inline
 theme contrast between elements in different modes is also allowed. It is very
