--- a/src/pages/developing/frameworks/vue.mdx
+++ b/src/pages/developing/frameworks/vue.mdx
@@ -81,7 +81,7 @@ carbon styles and components.
 
 ```js
 import 'carbon-components/css/carbon-components.css';
-import CarbonComponentsVue from '@carbon/vue/src/index';
+import CarbonComponentsVue from '@carbon/vue';
 Vue.use(CarbonComponentsVue);
 ```
 
