docs: add Francine Lucca to Carbon team page

--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -77,6 +77,11 @@ design and build with them.
 ![Tracey King headshot](/images/team/king_tracey.png)
 
 </Profile>
+<Profile name="Francine Lucca" title="Front-end Developer">
+
+![Francine Lucca headshot](/images/team/lucca_francine.png)
+
+</Profile>
 <Profile name="Josefina Mancilla"  title="Front-end Developer">
 
 ![Josefina Mancilla headshot](/images/team/mancilla_josefina.png)
