update: overview pattern page to add disclosures

--- a/src/pages/patterns/overview.mdx
+++ b/src/pages/patterns/overview.mdx
@@ -23,6 +23,7 @@ The following patterns have been approved for universal use.
 | [Common actions](/patterns/common-actions)      | Frequently used actions that appear multiple times across different components and workflows                                            |
 | [Dialogs](/patterns/dialog-pattern)             | Prompted when the system needs input from the user or to give the user urgent information concerning their current workflow             |
 | [Disabled states](/patterns/disabled-states)    | Used to completely remove the interactive function of a component                                                                       |
+| [Disclosures](/patterns/disclosures-pattern)    | Used to disclose additional content or information about part of a UI.                                                                  |
 | [Empty states](/patterns/empty-states-pattern)  | How to address moments in an app where there is no data to display to the user                                                          |
 | [Filtering](/patterns/filtering)                | The mechanism by which a user adds or removes data items from a displayed data set                                                      |
 | [Forms](/patterns/forms-pattern)                | A group of related input controls that allows users to provide data or configure options                                                |
