--- a/src/pages/patterns/disclosures-pattern/index.mdx
+++ b/src/pages/patterns/disclosures-pattern/index.mdx
@@ -1,16 +1,14 @@
 ---
 title: Disclosures
 description:
-  Status indicators are an important method of communicating severity level
-  information to users. Different shapes and colors enable users to quickly
-  assess and identify status and respond accordingly.
+  Disclosures are small moments that open up on a page and reveal additional
+  information related to the source it is triggered from.
 ---
 
 <PageDescription>
 
-Status indicators are an important method of communicating severity level
-information to users. Different shapes and colors enable users to quickly assess
-and identify status and respond accordingly.
+Disclosures are small moments that open up on a page and reveal additional
+information related to the source it is triggered from.
 
 </PageDescription>
 
@@ -132,7 +130,7 @@ click anywhere outside of the open disclosure container or click on the close
 `x` icon if it is present within the disclosure.
 
 <Row>
-<Column colLg={8}>
+<Column colLg={12}>
 
 ![Example of a disclosure opening and closing.](images/disclosure_opening_closing.gif)
 
