chore: update theme and other dependencies (#2602)
* chore: update theme and other dependencies

* chore: update packages again

Co-authored-by: Abbey Hart <abbeyhrt@gmail.com>

--- a/src/pages/components/form/usage.mdx
+++ b/src/pages/components/form/usage.mdx
@@ -44,7 +44,8 @@ do you gain by collecting this information?
       id: 'form',
       label: 'Form',
     },
-  ]}>
+  ]}
+>
   <ComponentVariant
     id="form"
     knobs={{
@@ -58,11 +59,12 @@ do you gain by collecting this information?
         'https://react.carbondesignsystem.com/?path=/story/components-form--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-input--label',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvform--default',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvform--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=form',
-      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-input--form-item',
-    }}>{`
+      'Web Components':
+        'https://web-components.carbondesignsystem.com/?path=/story/components-input--form-item',
+    }}
+  >{`
   <Form>
   <div style={{marginBottom: '2rem'}}>
     <TextInput
