--- a/src/pages/developing/frameworks/svelte.mdx
+++ b/src/pages/developing/frameworks/svelte.mdx
@@ -38,21 +38,24 @@ support, contact the
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="Carbon Components Svelte"
-      href="https://github.com/IBM/carbon-components-svelte">
+      href="https://github.com/IBM/carbon-components-svelte"
+    >
       <MdxIcon name="github" />
     </ResourceCard>
   </Column>
   <Column colMd={4} colLg={4} noGutterSm>
     <ResourceCard
       subTitle="Carbon Icons Svelte"
-      href="https://github.com/IBM/carbon-icons-svelte">
+      href="https://github.com/IBM/carbon-icons-svelte"
+    >
       <MdxIcon name="github" />
     </ResourceCard>
   </Column>
   <Column colMd={4} colLg={4} noGutterSm>
     <ResourceCard
       subTitle="Carbon Pictograms Svelte"
-      href="https://github.com/IBM/carbon-pictograms-svelte">
+      href="https://github.com/IBM/carbon-pictograms-svelte"
+    >
       <MdxIcon name="github" />
     </ResourceCard>
   </Column>
