--- a/src/pages/guidelines/color/overview.mdx
+++ b/src/pages/guidelines/color/overview.mdx
@@ -250,10 +250,7 @@ In the dark themes, layers become one step lighter with each added layer.
 
 <Tab label="Gray 90">
 
-Gray 90 components are paired with Gray 100 backgrounds to make the Gray 100
-Theme and Gray 80 components with Gray 90 backgrounds to make the Gray 90 Theme.
-Some components, such as buttons and toggles, share the same colors across both
-dark themes.
+![A dashboard in the Gray 90 theme](images/color-overview-themes-gray90.png)
 
 </Tab>
 
