--- a/src/pages/components/toggletip/usage.mdx
+++ b/src/pages/components/toggletip/usage.mdx
@@ -38,8 +38,8 @@ comprised of a UI trigger and the
 [popover component](http://carbondesignsystem.com/components/popover/usage/).
 Use the disclosure pattern to design supplemental content within the component.
 Toggletips can include a wide variety of information and interactive elements as
-long as
-[accessibility requirements](https://www.ibm.com/able/requirements/requirements/)
+long
+as[accessibility requirements](https://www.ibm.com/able/requirements/requirements/)
 are maintained including focus order and ensure all functionality is operable
 through a keyboard interface.
 
@@ -60,7 +60,7 @@ caption="Example of toggletip used within a data table">
 </Column>
 </Row>
 
-#### Toggletips vs Tooltips
+#### Toggletips verses Tooltips
 
 Toggletips and tooltips are similar visually and both contain a popover and
 interactive trigger element. The two components differ in the way they are
