feat: update csc members

--- a/src/pages/all-about-carbon/partners.mdx
+++ b/src/pages/all-about-carbon/partners.mdx
@@ -76,12 +76,14 @@ increases the internal and external eminence of Carbon Design System and IBM.
 
 <h3
   class="AutolinkHeader-module--header--1G1tm Markdown-module--h3--Gwbvh"
-  id="the-committee">
+  id="the-committee"
+>
   The people
   <a
     class="AutolinkHeader-module--anchor--36UpA AutolinkHeader-module--left-anchor--1SDoO"
     href="#the-people"
-    aria-label="The people permalink">
+    aria-label="The people permalink"
+  >
     <svg
       focusable="false"
       preserveAspectRatio="xMidYMid meet"
@@ -90,7 +92,8 @@ increases the internal and external eminence of Carbon Design System and IBM.
       width="20"
       height="20"
       viewBox="0 0 32 32"
-      aria-hidden="true">
+      aria-hidden="true"
+    >
       <path d="M29.25,6.76a6,6,0,0,0-8.5,0l1.42,1.42a4,4,0,1,1,5.67,5.67l-8,8a4,4,0,1,1-5.67-5.66l1.41-1.42-1.41-1.42-1.42,1.42a6,6,0,0,0,0,8.5A6,6,0,0,0,17,25a6,6,0,0,0,4.27-1.76l8-8A6,6,0,0,0,29.25,6.76Z"></path>
       <path d="M4.19,24.82a4,4,0,0,1,0-5.67l8-8a4,4,0,0,1,5.67,0A3.94,3.94,0,0,1,19,14a4,4,0,0,1-1.17,2.85L15.71,19l1.42,1.42,2.12-2.12a6,6,0,0,0-8.51-8.51l-8,8a6,6,0,0,0,0,8.51A6,6,0,0,0,7,28a6.07,6.07,0,0,0,4.28-1.76L9.86,24.82A4,4,0,0,1,4.19,24.82Z"></path>
     </svg>
@@ -114,7 +117,7 @@ increases the internal and external eminence of Carbon Design System and IBM.
 ![Mike Abbink headshot](/images/team/abbink_mike.png)
 
 </Profile>
-<Profile name="Dawn Ahukanna" title="Design Principal and Front-end Architect, Watson IoT">
+<Profile name="Dawn Ahukanna" title="Design Principal, Technology Support Services (GTS/TSS)">
 
 ![Dawn Ahukanna headshot](/images/team/ahukanna_dawn.png)
 
@@ -139,6 +142,16 @@ increases the internal and external eminence of Carbon Design System and IBM.
 ![Jeff Chew headshot](/images/team/chew_jeff.png)
 
 </Profile>
+<Profile name="Patrick Clough" title="Design System Enablement Lead, CIO Design, Finance and Operations">
+
+![Patrick Clough headshot](/images/team/clough_patrick.png)
+
+</Profile>
+<Profile name="Shawn Hoglund" title="Experience Lead, CHQ Digital Marketing">
+
+![Shawn Hoglund headshot](/images/team/hoglund_shawn.png)
+
+</Profile>
 <Profile name="David Levinson" title="IBM Design Principal, IBM Cloud and Cognitive Software">
 
 ![David Levinson headshot](/images/team/levinson_david.png)
@@ -147,6 +160,11 @@ increases the internal and external eminence of Carbon Design System and IBM.
 <Profile name="Alison Joseph" title="Development Manager, Carbon">
 
 ![Alison Joseph headshot](/images/team/joseph_alison.png)
+
+</Profile>
+<Profile name="Justin Pomeroy" title="IBM Cloud Kubernetes Service UI">
+
+![Justin Pomeroy headshot](/images/team/pomeroy_justin.png)
 
 </Profile>
 <Profile name="Tessa Rodes" title="Senior Design Manager, IBM Cloud">
@@ -162,11 +180,6 @@ increases the internal and external eminence of Carbon Design System and IBM.
 <Profile name="Jeannie Servaas" title="IBM Design Principal, Carbon">
 
 ![Jeannie Servaas headshot](/images/team/servaas_jean.png)
-
-</Profile>
-<Profile name="Jeff Sloyer" title="Senior Technical Staff Member, IBM Cloud">
-
-![Jeff Sloyer headshot](/images/team/sloyer_jeff.png)
 
 </Profile>
 <Profile name="JD Speer" title="Design Lead, IBM Storage">
@@ -187,6 +200,11 @@ increases the internal and external eminence of Carbon Design System and IBM.
 <Profile name="Garrett Vorbeck" title="Front-end Developer, IBM Systems">
 
 ![Garrett Vorbeck headshot](/images/team/vorbeck_garrett.png)
+
+</Profile>
+<Profile name="Cathy Zee-Poor" title="Creative Director for IBM Z Systems">
+
+![Cathy Zee-Poor headshot](/images/team/zee-poor_cathy.png)
 
 </Profile>
 </Row>
