v11[bugs]: assorted token bugs

--- a/src/pages/components/code-snippet/style.mdx
+++ b/src/pages/components/code-snippet/style.mdx
@@ -33,7 +33,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 | Class                                                  | Property         | Color token     |
 | ------------------------------------------------------ | ---------------- | --------------- |
-| `.bx--snippet`                                         | background       | `$field`        |
+| `.bx--snippet`                                         | background       | `$layer`        |
 | `.bx--snippet`                                         | text color       | `$text-primary` |
 | `.bx--snippet__icon`                                   | svg              | `$icon-primary` |
 | `.bx--copy-btn:hover` <br/> `.bx--snippet-btn:hover`   | background-color | `$layer-hover`  |
@@ -66,9 +66,9 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 | Class                         | Property         | Color token     |
 | ----------------------------- | ---------------- | --------------- |
-| `.bx--snippet--inline`        | background-color | `$field`        |
+| `.bx--snippet--inline`        | background-color | `$layer`        |
 | `.bx--snippet--inline`        | color            | `$text-primary` |
-| `.bx--snippet--inline:hover`  | background-color | `$field-hover`  |
+| `.bx--snippet--inline:hover`  | background-color | `$layer-hover`  |
 | `.bx--snippet--inline:focus`  | focus            | `$focus`        |
 | `.bx--snippet--inline:active` | background-color | `$layer-active` |
 
