--- a/src/pages/components/date-picker/style.mdx
+++ b/src/pages/components/date-picker/style.mdx
@@ -34,7 +34,8 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | Warning  | Warning message | text-color       | `$text-primary`    |
 |          | Warning icon    | svg              | `$support-warning` |
 | Disabled | Label           | text-color       | `$text-disabled`   |
-|          | Field           | background-color | `$field-disabled`  |
+|          | Field           | background-color | `$field`           |
+|          | Field           | border-bottom    | transparent        |
 |          | Field text      | text-color       | `$text-disabled`   |
 |          | Calendar icon   | svg              | `$icon-disabled`   |
 
