--- a/src/pages/components/dropdown/style.mdx
+++ b/src/pages/components/dropdown/style.mdx
@@ -55,7 +55,8 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 |                | Menu option     | checkmark        | `$icon-primary`       |
 | Multi-selected | Tag             | background-color | `$background-inverse` |
 |                | Tag             | text-color       | `$text-inverse`       |
-| Disabled       | Field           | background-color | `$field-disabled`     |
+| Disabled       | Field           | background-color | `$field`              |
+|                | Field           | border-bottom    | transparent           |
 |                | Field           | text-color       | `$text-disabled`      |
 |                | Label           | text-color       | `$text-disabled`      |
 |                | Chevron icon    | svg              | `$icon-disabled`      |
