--- a/src/pages/components/file-uploader/style.mdx
+++ b/src/pages/components/file-uploader/style.mdx
@@ -45,7 +45,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | Disabled | Label          | text-color                                                                                     | `$text-disabled`   |
 |          | Description    | text-color                                                                                     | `$text-disabled`   |
 |          | Drop text      | text-color                                                                                     | `$text-disabled`   |
-|          | Drop container | border                                                                                         | `$button-disabled` |
+|          | Drop container | border                                                                                         | `$border-disabled` |
 
 <Row>
 <Column colLg={8}>
