--- a/src/pages/components/number-input/style.mdx
+++ b/src/pages/components/number-input/style.mdx
@@ -29,16 +29,17 @@ used on `$background` and `$overlay` page backgrounds.
 
 ### Interactive states
 
-| Class                                       | Property         | Color token       |
-| ------------------------------------------- | ---------------- | ----------------- |
-| `.bx--number:focus`                         | border           | `$focus`          |
-| `.bx--number__controls:focus`               | border           | `$focus`          |
-| `[data-invalid]`                            | border           | `$support-error`  |
-| `[data-invalid]:focus`                      | color            | `$support-error`  |
-| `.bx--form-requirement`                     | text color       | `$support-error`  |
-| `.bx--label:disabled`                       | text color       | `$text-disabled`  |
-| `.bx--number:disabled`                      | background-color | `$field-disabled` |
-| `.bx--number input[type='number']:disabled` | text color       | `$text-disabled`  |
+| Class                                       | Property         | Color token      |
+| ------------------------------------------- | ---------------- | ---------------- |
+| `.bx--number:focus`                         | border           | `$focus`         |
+| `.bx--number__controls:focus`               | border           | `$focus`         |
+| `[data-invalid]`                            | border           | `$support-error` |
+| `[data-invalid]:focus`                      | color            | `$support-error` |
+| `.bx--form-requirement`                     | text color       | `$support-error` |
+| `.bx--label:disabled`                       | text color       | `$text-disabled` |
+| `.bx--number:disabled`                      | background-color | `$field`         |
+| `.bx--number:disabled`                      | border-bottom    | transparent      |
+| `.bx--number input[type='number']:disabled` | text color       | `$text-disabled` |
 
 **Active:** Number input should have a default number to start. The input should
 never be empty.
