--- a/src/pages/components/select/style.mdx
+++ b/src/pages/components/select/style.mdx
@@ -8,14 +8,15 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Class                 | Property   | Color token     |
-| --------------------- | ---------- | --------------- |
-| `.bx--select-input`   | background | `$field`        |
-| `.bx--select--inline` | background | transparent     |
-| `.bx--label`          | text color | `$text-primary` |
-| `.bx--select-input`   | text color | `$text-primary` |
-| `.bx--select--inline` | text color | `$icon-primary` |
-| `.bx--select__arrow`  | fill       | `$icon-primary` |
+| Class                 | Property      | Color token      |
+| --------------------- | ------------- | ---------------- |
+| `.bx--select-input`   | background    | `$field`         |
+| `.bx--select-input`   | border-bottom | `$border-strong` |
+| `.bx--select--inline` | background    | transparent      |
+| `.bx--label`          | text color    | `$text-primary`  |
+| `.bx--select-input`   | text color    | `$text-primary`  |
+| `.bx--select--inline` | text color    | `$icon-primary`  |
+| `.bx--select__arrow`  | fill          | `$icon-primary`  |
 
 <div className="image--fixed">
 
@@ -27,13 +28,14 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ### Interaction states
 
-| Class                             | Property   | Color token       |
-| --------------------------------- | ---------- | ----------------- |
-| `.bx--select-input:focus`         | border     | `$focus`          |
-| `.bx--select-input[data-invalid]` | border     | `$support-error`  |
-| `.bx--form-requirement`           | text color | `$support-error`  |
-| `.bx--select-input:disabled`      | background | `$field-disabled` |
-| `.bx--select-input:disabled`      | text color | `$text-disabled`  |
+| Class                             | Property      | Color token      |
+| --------------------------------- | ------------- | ---------------- |
+| `.bx--select-input:focus`         | border        | `$focus`         |
+| `.bx--select-input[data-invalid]` | border        | `$support-error` |
+| `.bx--form-requirement`           | text color    | `$support-error` |
+| `.bx--select-input:disabled`      | background    | `$field`         |
+| `.bx--select-input:disabled`      | border-bottom | transparent      |
+| `.bx--select-input:disabled`      | text color    | `$text-disabled` |
 
 <div className="image--fixed">
 
