--- a/src/pages/components/tabs/style.mdx
+++ b/src/pages/components/tabs/style.mdx
@@ -17,18 +17,18 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ### Line tabs
 
-| State    | Element               | Property         | Color token                                    |
-| -------- | --------------------- | ---------------- | ---------------------------------------------- |
-| Enabled  | Background            | background-color | transparent                                    |
-|          | Label                 | text-color       | `$text-secondary`                              |
-|          | Icon                  | svg              | `$icon-secondary`                              |
-|          | Background            | border-bottom    | `$border-subtle`                               |
-|          | Scrollable icon       | svg              | `$icon-primary`                                |
-|          | Scrollable fade       | background-color | 8px, linear-gradient white to 100% transparent |
-|          | Scrollable background | background-color | `$background`                                  |
-| Selected | Label                 | text-color       | `$text-primary`                                |
-|          | Icon                  | svg              | `$icon-primary`                                |
-|          | Background            | border-bottom    | `$interactive`                                 |
+| State    | Element               | Property         | Color token                                            |
+| -------- | --------------------- | ---------------- | ------------------------------------------------------ |
+| Enabled  | Background            | background-color | transparent                                            |
+|          | Label                 | text-color       | `$text-secondary`                                      |
+|          | Icon                  | svg              | `$icon-secondary`                                      |
+|          | Background            | border-bottom    | `$border-subtle`                                       |
+|          | Scrollable icon       | svg              | `$icon-primary`                                        |
+|          | Scrollable fade       | background-color | 8px, linear-gradient `$background` to 100% transparent |
+|          | Scrollable background | background-color | `$background`                                          |
+| Selected | Label                 | text-color       | `$text-primary`                                        |
+|          | Icon                  | svg              | `$icon-primary`                                        |
+|          | Background            | border-bottom    | `$interactive`                                         |
 
 <div className="image--fixed">
 
@@ -60,7 +60,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 |                | Icon                  | svg              | `$icon-primary`     |
 | Disabled       | Label                 | text-color       | `$text-disabled`    |
 |                | Icon                  | svg              | `$icon-disabled`    |
-|                | Background            | background-color | `$icon-disabled`    |
+|                | Background            | background-color | transparent         |
 
 <div className="image--fixed">
 
@@ -128,7 +128,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 |                | Icon                  | svg              | `$icon-primary`        |
 | Disabled       | Label                 | text-color       | `$text-disabled`       |
 |                | Icon                  | svg              | `$icon-disabled`       |
-|                | Background            | background-color | `$icon-disabled`       |
+|                | Background            | background-color | `$button-disabled`     |
 |                | Border                | border-right     | `$border-disabled`     |
 
 <div className="image--fixed">
