--- a/src/pages/components/text-input/style.mdx
+++ b/src/pages/components/text-input/style.mdx
@@ -27,14 +27,15 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ### Interactive states
 
-| State    | Element       | Property   | Color token       |
-| -------- | ------------- | ---------- | ----------------- |
-| Focus    | Field         | outline    | `$focus`          |
-| Invalid  | Field         | outline    | `$support-error`  |
-|          | Error message | text color | `$text-error`     |
-|          | Warning icon  | svg        | `$support-error`  |
-| Disabled | Field         | background | `$field-disabled` |
-|          | Field text    | text color | `$disabled-02`    |
+| State    | Element       | Property      | Color token      |
+| -------- | ------------- | ------------- | ---------------- |
+| Focus    | Field         | outline       | `$focus`         |
+| Invalid  | Field         | outline       | `$support-error` |
+|          | Error message | text color    | `$text-error`    |
+|          | Warning icon  | svg           | `$support-error` |
+| Disabled | Field         | background    | `$field`         |
+|          | Field         | border-bottom | transparent      |
+|          | Field text    | text color    | `$text-disabled` |
 
 <Row>
 <Column colLg={8}>
