--- a/src/pages/components/content-switcher/style.mdx
+++ b/src/pages/components/content-switcher/style.mdx
@@ -13,13 +13,13 @@ Content switchers have two main states: `selected` and `unselected`. By default,
 content switcher buttons are unselected with the selected state using a high
 contrast color.
 
-| Class                       | Property         | Color token      |
-| --------------------------- | ---------------- | ---------------- |
-| `.bx--content-switcher-btn` | background-color | `$ui-background` |
-| `.bx--content-switcher-btn` | text color       | `$text-02`       |
-| `--selected`                | background-color | `$ui-05`         |
-| `--selected`                | text color       | `$inverse-01`    |
-| `:after`                    | divider          | `$ui-03`         |
+| Class                       | Property         | Color token               |
+| --------------------------- | ---------------- | ------------------------- |
+| `.bx--content-switcher-btn` | background-color | `$background`             |
+| `.bx--content-switcher-btn` | text color       | `$text-secondary`         |
+| `--selected`                | background-color | `$layer-selected-inverse` |
+| `--selected`                | text color       | `$text-inverse`           |
+| `:after`                    | divider          | `$border-subtle`          |
 
 ### Interactive states
 
