--- a/src/pages/components/inline-loading/style.mdx
+++ b/src/pages/components/inline-loading/style.mdx
@@ -7,13 +7,13 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Class                       | Property | Color token       |
-| --------------------------- | -------- | ----------------- |
-| `.bx--loading__background`  | stroke   | `$ui-03`          |
-| `.bx--loading__stroke`      | stroke   | `$interactive-04` |
-| `.bx--inline-loading__text` | color    | `$text-02`        |
-| `status: finished`          | svg      | `$support-02`     |
-| `status: finished`          | svg      | `$support-01`     |
+| Class                       | Property | Color token           |
+| --------------------------- | -------- | --------------------- |
+| `.bx--loading__background`  | stroke   | `$border-subtle`      |
+| `.bx--loading__stroke`      | stroke   | `$border-interactive` |
+| `.bx--inline-loading__text` | color    | `$text-secondary`     |
+| `status: finished`          | svg      | `$support-success`    |
+| `status: finished`          | svg      | `$support-error`      |
 
 <Row>
 <Column colLg={8}>
