--- a/src/pages/components/search/style.mdx
+++ b/src/pages/components/search/style.mdx
@@ -30,12 +30,13 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 
 ### Interactive colors
 
-| Class                            | Property         | Color token       |
-| -------------------------------- | ---------------- | ----------------- |
-| `.bx--search-input:focus`        | border           | `$focus`          |
-| `.bx--search-input:disabled`     | background-color | `$field-disabled` |
-| `.bx--search-input:disabled`     | text color       | `$text-disabled`  |
-| `.bx--search-magnifier:disabled` | fill             | `$icon-disabled`  |
+| Class                            | Property         | Color token      |
+| -------------------------------- | ---------------- | ---------------- |
+| `.bx--search-input:focus`        | border           | `$focus`         |
+| `.bx--search-input:disabled`     | background-color | `$field`         |
+| `.bx--search-input:disabled`     | border-bottom    | transparent      |
+| `.bx--search-input:disabled`     | text color       | `$text-disabled` |
+| `.bx--search-magnifier:disabled` | fill             | `$icon-disabled` |
 
 <div className="image--fixed">
 
