--- a/src/pages/components/toggletip/usage.mdx
+++ b/src/pages/components/toggletip/usage.mdx
@@ -65,16 +65,15 @@ caption="Example of toggletip used within a data table">
 Toggletips and tooltips are similar visually and both contain a popover and
 interactive trigger element. The two components differ in the way they are
 invoked and dismissed and if the user must interact with the contents. A tooltip
-is exposed on hover or focus when you need to expose brief, supplemental
-information that is not interactive. A toggletip is used on click or enter when
-you need to expose information that a user needs to interact with.
+is exposed on `Hover` or `Focus` when you need to expose brief, supplemental
+information that is not interactive. A toggletip is used on `Click` and `Enter`
+when you need to expose information that a user needs to interact with.
 
 ### When to use
 
 - Use when defining a term or inline item
 - Use for quick, in context editing
 - Use for filter panels that overlay content
-- Use for menus such as profile or settings
 
 <Row>
 <Column colLg={8}>
@@ -123,8 +122,9 @@ variants listed below.
 </Column>
 </Row>
 
-1. **Trigger element:** Usually a button but as long as trigger is interactive,
-   it can visually change its shape and size depending on the use case.
+1. **UI trigger button:** Usually a button but as long as trigger is
+   interactive, it can visually change its shape and size depending on the use
+   case.
 2. **Tip:** An indicator that is added to a popover container to help show the
    relationship between the popover and where it was triggered from. Can utilize
    no tip, caret tip, or tab tip types.
@@ -149,8 +149,8 @@ four columns. Refer to the popover component for more specifications.
 
 Toggletips can be used on various part of the UI including, but not limited to,
 headers, data tables, side panels, modals, and read only cards. When active, the
-toggletip pop over may be positioned top, bottom, left, or right to the UI
-trigger.
+toggletip popover may be positioned **top, bottom, left,** or **right** to the
+UI trigger.
 
 <Row>
 <Column colLg={8}>
@@ -177,7 +177,7 @@ surrounding components or bleeds off the page where some content is not visible.
   Definition toggletips should display above or below interactive element
 </Caption>
 
-Placement of popover in relation to the trigger depends on the type of popover
+Placement of a popover in relation to the trigger depends on the type of popover
 used. Visit the popover component for specific guidelines for no tip, caret tip,
 and tab tip types.
 
@@ -191,7 +191,7 @@ examples of content used within toggletips, visit the disclosure pattern.
 ### Overflow content
 
 Since the toggletip uses the flexible popover component and disclosure pattern,
-scrolling is usually not needed. If scrolling is needed, in a drop down like
+scrolling is usually not needed. If scrolling is needed, in a dropdown like
 situation for instance, then the body section should scroll vertically with the
 header and footer remaining fixed in place if those elements are present. Do not
 scroll horizontally or let content bleed off the page.
@@ -215,9 +215,9 @@ For further content guidance, see Carbon's
 
 ### States
 
-The toggletip component has two states: active and inactive. By default, the
-toggletip is hidden and inactive. Toggletips are displayed on `click` and
-`enter`.
+The toggletip component has two states—active and inactive. By default, the
+toggletip is hidden and inactive. Toggletips are displayed on `Click` and
+`Enter`.
 
 ### Interactions
 
